--- a/content/posts/analytics-foundations.mdx
+++ b/content/posts/analytics-foundations.mdx
@@ -1,7 +1,7 @@
 ---
 title: Analytics Foundations
 date: 2025-02-05
-summary: A pragmatic baseline for trustworthy analytics: events, consent, and governance.
+summary: "A pragmatic baseline for trustworthy analytics: events, consent, and governance."
 tags:
   - analytics
   - governance
@@ -22,4 +22,3 @@ const event = {
   props: { label: 'contact', location: 'hero' }
 }
 ```
-
